Module 3.2 Blog Post
In this Module 3.2 Blog Post, I tried to explore how Ethical UX requires responsive design, emotional feedback, and cognitive respect, and updated my css style.

--- a/kalaycio/index.html
+++ b/kalaycio/index.html
@@ -745,7 +745,260 @@
   </footer>
 
 
-         <!-- Module 3.2 Blog Post Starts here -->
+ <title>Designing Digital Trust</title>
+  <article>
+    <h1>Designing Digital Trust: How Feedback, Timing, and Ethics Shape User Experience</h1>
+
+    <section>
+      <h2>Introduction</h2>
+      <p>More than ever, screens and systems are influencing the human experience in our increasingly digitalized world. Users are interacting with interfaces that affect not only their behavior but also their thoughts, choices, and emotions from the time they unlock their phones in the morning until they scroll through them before bed. Every interaction gets assessed based on timing, clarity, responsiveness, and trust, whether it involves filling out a form, using an app, or getting a notification.</p>
+
+      <p>The success of digital systems is determined by these micro-moments. A poorly written error message can drive away a customer; a slow-loading checkout screen can cost a sale; and persuasive design techniques can undermine trust if they are employed unethically. I investigate how the user experience is shaped by feedback, responsiveness, emotional memory, and ethical persuasion in this blog post. I demonstrate how design principles should assist users rather than control them by utilizing UX laws like the Peak–End Rule, Doherty Threshold, Fitts’s Law, Von Restorff Effect, Jakob’s Law, and Tesler’s Law.</p>
+    </section>
+
+    <section>
+      <h2>1. Timing and Responsiveness: The Foundation of Flow</h2>
+      <h3>Perceptual Timing and User Trust</h3>
+      <p>In <em>Designing with the Mind in Mind</em>, Jeff Johnson (2020) discusses the significance of perceptual thresholds. Even when an interface is technically working, these thresholds assist users in determining whether it is responsive:</p>
+      <ul>
+        <li>&lt;0.1 seconds: Instant</li>
+        <li>~1 second: Maintains flow</li>
+        <li>&gt;10 seconds: Causes user doubt without feedback</li>
+      </ul>
+
+      <p>Although they are not aware of it, users sense delays in interactions. This happened to me on our university website, MYCWU, where pressing "submit" left me waiting for a few seconds for a response. I submitted it again because I wasn't sure if it worked, which resulted in duplicate forms. A straightforward "Submitting..." message or loading spinner would have prevented everything.</p>
+    </section>
+  </article>
+  <section>
+  <h3>The Doherty Threshold: 400 Milliseconds of Opportunity</h3>
+  <p>According to Yablonski (2020), if interfaces react in 400 milliseconds or less, users stay more involved and productive. Skeleton screens are used by systems such as Facebook to mimic speed; Medium loads a grainy image before the high-resolution version is ready. Even in situations where real-time responsiveness is not possible, these strategies keep users interested.</p>
+  <p>The goal is to make responsiveness invisible so that users aren't aware of it. It produces a state of flow in which communication is easy and emotionally fulfilling.</p>
+</section>
+
+<section>
+  <h2>2. Feedback and Control: Designing Conversations</h2>
+  <figure>
+  <img src="images/googleundo.png" width="600">
+  <figcaption>
+    Figure 1: Gmail's "Undo Send" feature provides users with a brief window to recall sent emails, enhancing control and reducing potential errors. 
+    Source: <a href="https://www.paubox.com/blog/how-to-undo-a-sent-email-in-gmail" target="_blank">Paubox</a>
+  </figcaption>
+</figure>
+
+  
+  <h3>Microinteractions and Cognitive Ease</h3>
+  <p>Johnson (2020) also refers to feedback as the "language" of the system. Users can tell that the system is paying attention when they receive timely, polite, and educational feedback. Button depressions, hover states, loading indicators, and confetti animations are examples of microinteractions that make an interaction more joyful and reassuring.</p>
+  <p>Take Slack, for example, where sending messages is verified by a checkmark. Or Google Docs, which shows "All changes saved" as soon as you type. Confidence is increased by these signals.</p>
+
+  <h3>Undo and Error Recovery</h3>
+  <p>The Undo button is among the most strong control mechanisms. It enables users to feel safer, try new things, and learn from their mistakes. An excellent example is Gmail's "Undo Send" feature, which displays a bright yellow banner with the option to retrieve an email. It uses:</p>
+  <ul>
+    <li><strong>Von Restorff Effect</strong> (standout color)</li>
+    <li><strong>Peak–End Rule</strong> (ending on a note of relief)</li>
+  </ul>
+  <p>Contrast this with a website that removes content without verification or retraction. Not only are users angry, but they are also scared to use the system in the future.</p>
+</section>
+
+<section>
+  <h2>3. Visual Design and Memory: Peak–End Rule & Contrast</h2>
+  <figure>
+  <img src="images/Resize_20211203_5-1024x514.png" alt="UX course cards with visual emphasis on distinct options" width="600">
+  <figcaption>
+    Figure 2: Highlighting a course with contrasting visuals exemplifies the Von Restorff Effect—drawing attention through differentiation. 
+    Source: <a href="https://www.radiant.digital/the-von-restorff-effect-in-ux-design/" target="_blank">Radiant Digital</a>
+  </figcaption>
+</figure>
+
+
+  <h3>Peak–End Rule: Moments That Matter</h3>
+  <p>According to the Peak–End Rule (Yablonski, 2020), people tend to recall an experience's emotional climax and conclusion more than its other parts. This is exploited by apps such as Duolingo, which use music, motion, and visuals to celebrate lesson completion. Users recall the satisfying conclusion even if the lesson was challenging.</p>
+  <p>This is applied more broadly in Spotify Wrapped. The app displays customized animations of users' music statistics once a year. It creates a memorable peak that consumers associate with the brand throughout the year because it is both emotionally and visually compelling.</p>
+</section>
+<section>
+  <h3>Von Restorff Effect: Strategic Attention-Grabbery</h3>
+  <p>Unique features are more noticeable and easier to recall. The Von Restorff Effect explains why users see a splash of color on a boring screen or click the red "Delete" button. However, if everything stands out, nothing stands out, so this rule needs to be used carefully.</p>
+  <p>For instance, making all of the buttons bright red leads to confusion. Errors are decreased when users pause and think about their next move when only destructive actions are highlighted in red.</p>
+</section>
+
+<section>
+  <h2>4. Design Patterns and Familiarity: Fitts’s and Jakob’s Laws</h2>
+
+  <h3>Fitts’s Law: Make It Easy to Tap</h3>
+  <p>Fitts' Law explains how long it takes to get to a target depending on its distance and size. Error rates rise and users are slowed down by small, closely spaced buttons. This particularly impacts:</p>
+  <ul>
+    <li>Elderly users</li>
+    <li>People with motor impairments</li>
+    <li>Users on mobile</li>
+  </ul>
+  <p>Large, evenly spaced interactive elements should be a priority for designers. For example, Apple's Human Interface Guidelines suggest that tap areas be at least 44 by 44 pixels.</p>
+
+  <h3>Jakob's Law: Avoid Reinventing the Wheel</h3>
+  <p>According to Jakob's Law, users expect your system to function similarly to other websites and apps because they spend the majority of their time on them. This implies:</p>
+  <ul>
+    <li>Logos go in the top-left corner</li>
+    <li>Navigation is horizontal</li>
+    <li>Shopping carts belong in the top-right</li>
+  </ul>
+  <p>Designers may find it creative to defy this convention, but users will find it confusing. Because it is trusted, familiarity is not dull.</p>
+</section>
+
+<section>
+  <h2>5. Persuasion vs. Manipulation: Ethics in UX</h2>
+
+  <h3>Dark Patterns and Cognitive Exploitation</h3>
+  <p>Deceptive design techniques known as "dark patterns" are employed to control users. Among the examples are:</p>
+  <ul>
+    <li>Pre-selected checkboxes during checkout</li>
+    <li>Misleading language in unsubscribe flows</li>
+    <li>Delayed or hidden "cancel" options</li>
+  </ul>
+  <p>These patterns take advantage of users, especially weaker groups, by taking advantage of cognitive biases. They weaken long-term loyalty even though they might increase short-term performance indicators.</p>
+  <p>A fitness app I used buried the cancel button in a maze of buttons. It made me distrust the brand rather than inspire me.</p>
+
+  <h3>Persuasion Ethics: Encourage, Don't Force</h3>
+  <p>Through support, consent, and clarity, ethical UX fosters trust. Headspace uses no-pressure interactions, milestone rewards, and gentle urges to promote meditation practices. It is persuasive, but its primary focus is on the welfare of the user.</p>
+  <p>An interface that is morally appealing:</p>
+  <ul>
+    <li>Explains choices clearly</li>
+    <li>Allows easy opt-outs</li>
+    <li>Honors user decisions</li>
+  </ul>
+  <p>As designers, we must strike a balance between our obligation to protect and our ability to influence.</p>
+</section>
+
+<section>
+  <h2>6. Emotional Design: Reflecting Identity and Values</h2>
+
+  <h3>Don Norman’s Emotional Design</h3>
+  <p>Three levels of emotional design are defined by Don Norman:</p>
+  <ol>
+    <li><strong>Visceral:</strong> Immediate aesthetic impact</li>
+    <li><strong>Behavioral:</strong> Usability and performance</li>
+    <li><strong>Reflective:</strong> Personal significance and meaning</li>
+  </ol>
+  <p>Notion is an app that excels at all three. It is viscerally beautiful, behaviorally easy to use and reflectively customizable. By creating templates that represent their individuality, users transform the app from a simple tool into a reliable partner.</p>
+</section>
+<section>
+  <p>This aligns with research by Tractinsky, Katz, and Ikar (2000), who demonstrated that users tend to rate visually appealing systems as more usable—even when no functional difference exists. Their findings highlight how aesthetics play a significant role in perceived quality and trustworthiness in digital interfaces.</p>
+
+  <h3>Design as Emotional Memory</h3>
+  <p>Excellent user experience is embedded in the user's emotional memory. I can still recall the first time I got a Spotify playlist recommendation that was exactly right for my mood or a Slack "Your message was sent" animation. These are micro-moments of joy that stick with users, not just conveniences.</p>
+</section>
+
+<section>
+  <h2>7. Tesler’s Law: Complexity Behind the Curtain</h2>
+  <p>According to Tesler's Law, which is also referred to as the Law of Conservation of Complexity, all systems are inherently complex. Designers have to choose between handling that load in the background or putting it on the user.</p>
+  <p>For example:</p>
+  <ul>
+    <li>Google Search hides incredible technical complexity behind a single input field.</li>
+    <li>Apple Pay abstracts away payment details into a two-click flow.</li>
+  </ul>
+  <p>Complexity is absorbed by good designers, saving users the trouble. However, it raises an ethical query: what complexity are we concealing? Are we deciding what should be surfacing for the user?</p>
+  <p>Eliminating interface friction, not user choice, is the goal of designing ethical simplification.</p>
+</section>
+
+<section>
+  <h2>8. Feedback in Critical and Accessible Contexts</h2>
+
+  <h3>Feedback in Crisis Scenarios</h3>
+  <p>When the stakes are high, like in emergency reporting, banking, or medical appointments, responsive feedback is crucial.</p>
+  <p>For instance, the payment processing website Stripe offers:</p>
+  <ul>
+    <li>Real-time validation of card numbers</li>
+    <li>Dynamic error prevention</li>
+    <li>Confirmation messages with details</li>
+  </ul>
+  <p>This boosts confidence. The user is aware that their data was delivered securely.</p>
+
+  <h3>Accessibility as Feedback and Respect</h3>
+  <p>Being accessible is a sign of respect, not just a technical requirement. The W3C Web Content Accessibility Guidelines (2023) place a strong emphasis on alternative visuals, visual input, and clear screen reader feedback.</p>
+  <p>A visually impaired user is informed that they were not taken into consideration by a system that lacks adequate contrast or alt-text.</p>
+  <p>Designing for ethics means designing for inclusion.</p>
+</section>
+
+<section>
+  <h2>9. Real-World Reflections: From Frustration to Delight</h2>
+
+  <h3>Negative Experience: Government Filing Website</h3>
+  <p>Trying to file taxes on a state-run site, I encountered:</p>
+  <ul>
+    <li>No confirmation messages</li>
+    <li>Rigid input validation</li>
+    <li>Confusing error prompts</li>
+  </ul>
+  <p>These violated:</p>
+  <ul>
+    <li>Postel’s Law (strict input formats)</li>
+    <li>Doherty Threshold (slow response)</li>
+    <li>Peak–End Rule (bad ending = bad memory)</li>
+  </ul>
+  <p>My confidence was restored when I switched to a private platform that offered improved feedback, useful tooltips, and a success banner.</p>
+
+  <h3>Positive Experience: Spotify and Duolingo</h3>
+  <p><strong>Spotify:</strong></p>
+  <ul>
+    <li>Provides near-instantaneous playback</li>
+    <li>Surprises with end-of-year “Wrapped”</li>
+    <li>Uses personalization to increase emotional peaks</li>
+  </ul>
+
+  <p><strong>Duolingo:</strong></p>
+  <ul>
+    <li>Encourages daily habits with visual rewards</li>
+    <li>Uses error-reducing feedback</li>
+    <li>Builds trust through transparency</li>
+  </ul>
+
+  <p>These apps don’t just work, they interact and make users connect.</p>
+</section>
+<section>
+  <h2>10. Designing for Edge Cases</h2>
+  <figure>
+  <img src="images/facebooklite.png" alt="Facebook Lite mobile interface" width="600">
+  <figcaption>
+    Figure 3: Facebook Lite’s interface is optimized for low-bandwidth users with minimal data usage and lightweight UI elements. 
+    Source: <a href="https://www.lifewire.com/best-facebook-apps-for-android-8774320" target="_blank">Lifewire</a>
+  </figcaption>
+</figure>
+
+
+  <p>The ideal user, someone with a modern smartphone, a steady internet connection, and digital fluency, is frequently at the center of UX. However, designing for ethical UX requires taking into account edge cases, such as users who live in remote locations, have antiquated technology, or have inconsistent connectivity.</p>
+
+  <h3>Offline Mode and Feedback Lag</h3>
+  <p>Spotify and Google Docs are two examples of apps that have offline modes that synchronize when the user reconnects. Even in the absence of connectivity, these systems maintain usability in settings and offer reliable feedback.</p>
+  <p>I have, however, encountered apps that just silently malfunction or crash when offline, resulting in frustration and data loss. Even if everything else went perfectly, this violates the Peak-End Rule because it gives users a bad impression.</p>
+
+  <h3>Inclusive Design for the Margins</h3>
+  <p>Globally, millions of users operate on 2G or 3G networks. Design choices like:</p>
+  <ul>
+    <li>Lightweight image formats (WebP over PNG)</li>
+    <li>Minimal reliance on animation or real-time data</li>
+    <li>Local caching</li>
+  </ul>
+  <p>Those can significantly increase access. Examples of high-performing apps designed for low-end phones are Facebook Lite and Google Go.</p>
+  <p>Communities are excluded when these cases are disregarded. Designing ethical interactions is universal and does not presume privilege.</p>
+</section>
+
+<section>
+  <h2>Conclusion</h2>
+
+  <p>Nowadays, digital products have an impact on almost every aspect of human life, including learning, relationships, health, and decision-making. We have a huge responsibility as researchers, developers, or designers. We create more than just interfaces; we create experiences that can inspire confidence or insecurity, encourage independence or confusion, or excite or annoy.</p>
+
+  <p>The Doherty Threshold, Fitts's Law, Jakob's Law, Tesler's Law, Peak-End Rule, and other UX laws are examined as stepping stones for designing with consideration and responsiveness. However, these guidelines need to be implemented in a way that promotes equity, accessibility, and empathy.</p>
+
+  <p>The hidden sense of clarity, concern, and comfort a user experiences during interaction is what truly defines success in user experience (UX), not uniqueness.</p>
+</section>
+<section>
+  <h2>Sources</h2>
+  <ul>
+    <li>Johnson, J. (2020). <em>Designing with the Mind in Mind: Simple Guide to Understanding User Interface Design Guidelines</em>. Morgan Kaufmann Publisher.</li>
+    <li>Yablonski, J. (2020). <em>Laws of UX: Using Psychology to Design Better Products & Services</em>. O’Reilly Media, Incorporated.</li>
+    <li>Tractinsky, N., Katz, A. S., & Ikar, D. (2000). <em>What is beautiful is usable</em>. Interacting with Computers, 13(2), 127–145. <a href="https://doi.org/10.1016/s0953-5438(00)00031-x" target="_blank">https://doi.org/10.1016/s0953-5438(00)00031-x</a></li>
+    <li>Neusesser, T., & Sunwall, E. (2023, May 14). <em>Error Message Guidelines</em>. Nielsen Norman Group. <a href="https://www.nngroup.com/articles/error-message-guidelines/" target="_blank">https://www.nngroup.com/articles/error-message-guidelines/</a></li>
+    <li>W3C. (2023). <em>Web content accessibility guidelines (WCAG) 2.2</em>. W3C. <a href="https://www.w3.org/TR/WCAG22/" target="_blank">https://www.w3.org/TR/WCAG22/</a></li>
+  </ul>
+</section>
+
 
       </main>
 <!-- Page Footer  -->
