Module 2.2 Blog Post
Module 2.2 Blog Post Update.

--- a/kalaycis/index.html
+++ b/kalaycis/index.html
@@ -365,14 +365,8 @@
              </ul>
                                        
 
-\<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Designing for Usability</title>
-</head>
-<body>
   <header>
     <h1>Designing for Usability: How Memory, Vision, and Mental Shortcuts Shape Digital Interaction</h1>
   </header>
@@ -407,8 +401,6 @@
     <p>For instance, a form that shows past inputs (such as a search phrase they remember or autofill recommendations) enables users to identify rather than remember.</p>
     <p>Mental models also play a huge role. Users build internal models of how systems work based on past experiences. For example, a gear icon usually implies “settings.” Violating these expectations confuses and frustrates users. Snapchat's early interface famously lacked labeled icons and traditional navigation, leading new users to feel alienated and disoriented.</p>
   </section>
-</body>
-</html>
 <section>
   <h2>3. Attention, Tasks, and Interface Flow</h2>
   <p>Johnson (2020, Ch. 8) describes user behavior through the goal-execute-evaluate cycle:</p>
@@ -507,36 +499,19 @@
   <p>Allow the language of clarity, purpose, and care to be expressed through each button, layout, and interaction. That's what truly usable design is all about.</p>
 </section>
 <section>
-  <h2>Sources</h2>
-  <ul>
-    <li>
-      Downing, N. L., Bates, D. W., & Longhurst, C. A. (2020). <em>Physician burnout in the electronic health record era: Are we ignoring the real cause?</em> Journal of the American Medical Informatics Association, 27(7), 1040–1041. 
-      <a href="https://doi.org/10.1093/jamia/ocaa088" target="_blank">https://doi.org/10.1093/jamia/ocaa088</a>
-    </li>
-    <li>
-      Filho, B. (2022, May 25). <em>Duolingo’s UX is addictively good—here’s why</em>. UX Collective. 
-      <a href="https://uxdesign.cc/duolingos-ux-is-addictively-good-heres-why-44d3a924fef9" target="_blank">https://uxdesign.cc/duolingos-ux-is-addictively-good-heres-why-44d3a924fef9</a>
-    </li>
-    <li>
-      Hick, W. E. (1952). <em>On the rate of gain of information</em>. Quarterly Journal of Experimental Psychology, 4(1), 11–26. 
-      <a href="https://doi.org/10.1080/17470215208416600" target="_blank">https://doi.org/10.1080/17470215208416600</a>
-    </li>
-    <li>
-      Interaction Design Foundation. (n.d.). <em>Tesler’s Law of the Conservation of Complexity</em>. 
-      <a href="https://www.interaction-design.org/literature/book/the-glossary-of-human-computer-interaction/tesler-s-law-of-the-conservation-of-complexity" target="_blank">https://www.interaction-design.org/.../tesler-s-law-of-the-conservation-of-complexity</a>
-    </li>
-    <li>
-      Johnson, J. (2020). <em>DESIGNING WITH THE MIND IN MIND: simple guide to understanding user interface design guidelines</em>. Morgan Kaufmann Publisher.
-    </li>
-    <li>
-      Yablonski, J. (2020). <em>Laws of UX: using psychology to design better products & services</em>. O’Reilly Media, Incorporated.
-    </li>
-    <li>
-      Material Design. (n.d.). <em>Snackbars</em>. Material Design 3. 
-      <a href="https://m3.material.io/components/snackbar" target="_blank">https://m3.material.io/components/snackbar</a>
-    </li>
-  </ul>
-</section>
+  <footer class="article-footer">
+      <h2>Sources</h2>
+      <ul>
+        <li>Downing, N. L., Bates, D. W., & Longhurst, C. A. (2020). <em>Physician burnout in the electronic health record era: Are we ignoring the real cause?</em> Journal of the American Medical Informatics Association, 27(7), 1040–1041. <a href="https://doi.org/10.1093/jamia/ocaa088" target="_blank">https://doi.org/10.1093/jamia/ocaa088</a></li>
+        <li>Filho, B. (2022, May 25). <em>Duolingo’s UX is addictively good—here’s why</em>. UX Collective. <a href="https://uxdesign.cc/duolingos-ux-is-addictively-good-heres-why-44d3a924fef9" target="_blank">https://uxdesign.cc/duolingos-ux-is-addictively-good-heres-why-44d3a924fef9</a></li>
+        <li>Hick, W. E. (1952). <em>On the rate of gain of information</em>. Quarterly Journal of Experimental Psychology, 4(1), 11–26. <a href="https://doi.org/10.1080/17470215208416600" target="_blank">https://doi.org/10.1080/17470215208416600</a></li>
+        <li>Interaction Design Foundation. (n.d.). <em>Tesler’s Law of the Conservation of Complexity</em>. <a href="https://www.interaction-design.org/literature/book/the-glossary-of-human-computer-interaction/tesler-s-law-of-the-conservation-of-complexity" target="_blank">https://www.interaction-design.org/literature/book/the-glossary-of-human-computer-interaction/tesler-s-law-of-the-conservation-of-complexity</a></li>
+        <li>Johnson, J. (2020). <em>DESIGNING WITH THE MIND IN MIND: simple guide to understanding user interface design guidelines</em>. Morgan Kaufmann Publisher.</li>
+        <li>Yablonski, J. (2020). <em>Laws of UX: using psychology to design better products & services</em>. O’Reilly Media, Incorporated.</li>
+        <li>Material Design. (n.d.). <em>Snackbars</em>. Material Design 3. <a href="https://m3.material.io/components/snackbar" target="_blank">https://m3.material.io/components/snackbar</a></li>
+      </ul>
+    </footer>
+  </article>
 
 
          <!-- Module 2.3 Blog Post Starts here -->
